assets/scss/partials/_page_tab.scss
.page_tab {
  border-bottom: 1px solid #ebedef;
  text-align: center;
  padding: 20px 0;

  &__item {
    font-weight: $fw-semi;
    font-style: normal;
    font-stretch: normal;
    line-height: normal;
    letter-spacing: 1.5px;
    color: #8c94a0;
    text-transform: uppercase;
    display: inline-block;
    vertical-align: middle;

    @include rem(font-size, 13px);

    a {
      color: inherit;
      padding: 10px;

      &:hover {
        color: #111111;
      }
    }

    &--active {
      a {
        color: #111111;
      }
    }
  }
}

